forms/_field.scss
@mixin field (
$width:auto
) {
	@include border-box();
	@include display(inline-block);
	@include padding(0 ($base-space/2));
	color:map-get($color, text);
	background:$field-bg;
	line-height: $touch-target;
	max-width:100%;
	min-height: $touch-target;
	width:$width;

	@if $field-font-family {
		font-family: $field-font-family;
	}

	// Border Settings
	@if $has-field-border == yes {
		border: 1px solid $field-border;
	}
	@else {
		border: 1px solid $field-bg;
	}
}

